small burnishing and clean code :)